fix: overflow-x
overflow during the flowershow animation

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -59,4 +59,5 @@ body {
     margin: 0;
     background-color: $bg-color;
     color: $text-color;
+    overflow-x: hidden;
 }
